...
                    loginViewModel.userNotFound.value = false
                    navigationActions.navigateTo(Destinations.SIGN_UP)
                  }
                  .testTag("SignUpNavButton"),
          color = MaterialTheme.colorScheme.primary,
          textDecoration = TextDecoration.Underline,
          text = "Don't have an account? Sign up",
          style =
              TextStyle(
                  fontSize = 16.sp,
                  lineHeight = 32.sp,
                  fontFamily = FontFamily(Font(R.font.sf_pro_display_regular)),
              ))
...
